--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -24,6 +24,7 @@
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-permissions": "^14.4.0",
@@ -42,6 +43,7 @@
     "react-native": "0.74.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.2.3",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
